# alpha_stable_mixture

./: README.md
alpha_stable_mixture/: README.md  pyproject.toml  requirements.txt  setup.py
alpha_stable_mixture/alpha_stable_mixture/: __init__.py  bayesian.py  ecf.py  ecf_estimators.py  em.py  em_methode.py  em_methode_with_gibbs.py  estimate_parameter.py  evaluation.py  generate_sample.py  gibbs.py  mcculloch.py  metrics.py  mle.py  quantiles.py  r_interface.py  rt_estimation.py  simulations.py  stable_mixture_estimators.py  testing_data.py  utils.py  visualization.py
alpha_stable_mixture/interface/: __init__.py  app.py  preprocess.py
alpha_stable_mixture/tests/: test_em.py  test_gibbs.py  test_stable_fit.py  test_utils.py
