[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha_stable_mixture"
version = "0.1.0"
description = "Tools for modeling and estimating alpha-stable mixture distributions"
authors = [
    {name = "Adam Najib"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "streamlit",
    "statsmodels",
    "rpy2"
]

[tool.setuptools.packages.find]
where = ["alpha_stable_mixture"]
